Changes from 0.3.3-40 to 0.3.3-41 [27-May-2016]

* Fixed reference to packageVersion which produced a note in CRAN check.

Changes from 0.3.2-39 to 0.3.3-40 [4-Apr-2016]

* Added Gabor noise option. Generate stimuli with generateStimuli2IFC(..., noise_type='gabor'). Almost all functions have been affected in refactoring. 
* Added option to specify number of spatial scales
* Changed output of autoscale: scaling factor is no longer part of the list of classification images that is returned
* Bugfix: When using pre 0.3.0 Rdata file, the paramater matrix will now be truncated to the appropriate numbers of parameters

Changes from 0.3.2-37 to 0.3.2.1-39 [8-Oct-2015]

* Bugfix: NA's in by parameter of batchGenerateCI2IFC() get ignored instead of making R crash. Thank you Elze Ufkes for reporting this bug!

Changes from 0.3.2-37 to 0.3.2-38 [25-Aug-2015]

* Bugfix: target path error message for generateCI2IFC()

Changes from 0.3.2-34 to 0.3.2-37 [20-Jul-2015]

* Added import and importFrom statements to function to comply with new R version package requirements
* Updated DESCRIPTION to be slighlty more informative

Changes from 0.3.1-33 to 0.3.2-34 [18-Jul-2015]

* Changed progressbar to dplyr progress bar, no longer dependent on tcltk (so no more dependency on xquartz on OS X). Also adds time estimation.

Changes from 0.3.1-30 to 0.3.1-33 [19-Mar-2015]

* Fixed targetci bug (should be empty list by default instead of boolean) in computeCumulativeCICorrelation
* Removed examples in generateNoiseImage to deal with R-Forge's imposed memory limits

Changes from 0.3.1-30 to 0.3.1-31 [19-Mar-2015]

* Added computeCumulativeCICorrelation. Computes cumulative trial CIs correlations with final/target CI. Use for instance for plotting curves of trial-final/target CI correlations to estimate how many trials are necessary in your task
* Bugfix in generateCINoise: added possibility of just one stimulus/response